--- a/.github/workflows/allure.yaml
+++ b/.github/workflows/allure.yaml
@@ -54,7 +54,7 @@ jobs:
                   git config --local user.name "GitHub Action"
                   git add allure-report -f
                   git add allure-results -f
-                  git commit -m "[chore] autogenerate Allure report" -a
+                  git commit -m "[chore] autogenerate Allure reports" -a
 
             - name: Push changes
               if: always()
