--- a/.github/workflows/pr-check-conflict.yml
+++ b/.github/workflows/pr-check-conflict.yml
@@ -11,10 +11,12 @@ on:
 
 jobs:
   main:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Check for dirty pull requests
         uses: eps1lon/actions-label-merge-conflict@releases/2.x
+        
         with:
           dirtyLabel: 'status: conflict'
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
