--- a/.github/workflows/pr-check-conflict.yml
+++ b/.github/workflows/pr-check-conflict.yml
@@ -29,6 +29,7 @@ jobs:
         id: resolution
         uses: GetSidetrack/action-xcodeproj-spm-update@main
         with:
+          forceResolution: true
           failWhenOutdated: false
           dirtyLabel: 'status: outdated'
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
