--- a/.github/workflows/allure-ci.yml
+++ b/.github/workflows/allure-ci.yml
@@ -14,8 +14,8 @@ jobs:
             - name: Commit report results
               if: always()
               run: |
-                  git config --local user.email "action@github.com"
-                  git config --local user.name "GitHub Action"
+                  git config user.email "action@github.com"
+                  git config user.name "GitHub Action"
                   git add allure-report -f
                   git add allure-results -f
                   git commit -m "[chore] autogenerate Allure report" -a
