--- a/.github/workflows/pr-check-conflict.yml
+++ b/.github/workflows/pr-check-conflict.yml
@@ -32,10 +32,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           run: |
-            if [ $(git merge-base @ main) == $(git rev-parse master) ]
+            if [ $(git merge-base @ main) == $(git rev-parse main) ]
             then
               echo "Your branch is up to date."
-              exit 0
             else
               echo "You need to merge / rebase."
               exit 1
